dev/Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: osiguranje-dev
  labels:
    name: osiguranje-dev
