dev/BuyingMarket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyingmarket
  namespace: osiguranje-dev
  labels:
    service: buyingmarket
spec:
  replicas: 1
  selector:
    matchLabels:
      service: buyingmarket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: buyingmarket
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/raf-si-2021/osiguranjeraf2022/buying-market:latest
          name: buyingmarket
          ports:
            - name: buyingmarket
              containerPort: 8092
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: buyingmarket
  namespace: osiguranje-dev
  labels:
    service: buyingmarket
spec:
  ports:
    - port: 8092
      protocol: TCP
      targetPort: 8092
  selector:
    service: buyingmarket
