dev/Gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: osiguranje-dev
  labels:
    service: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      service: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: gateway
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/raf-si-2021/osiguranjeraf2022/gateway:latest
          name: gateway
          ports:
            - name: gateway
              containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: osiguranje-dev
  labels:
    service: gateway
spec:
  clusterIP: 10.96.0.3
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    service: gateway
