dev/Mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  namespace: osiguranje-dev
  labels:
    service: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysqldb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: mysqldb
    spec:
      containers:
        - image: arm64v8/mysql
          name: mysqldb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - name: mysqldb
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mysqldb
          persistentVolumeClaim:
            claimName: mysqldb
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: osiguranje-dev
  labels:
    service: mysqldb
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    service: mysqldb
