dev/Otc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otc
  namespace: osiguranje-dev
  labels:
    service: otc
spec:
  replicas: 1
  selector:
    matchLabels:
      service: otc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: otc
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/raf-si-2021/osiguranjeraf2022/otc:latest
          name: otc
          ports:
            - name: otc
              containerPort: 8094
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: otc
  namespace: osiguranje-dev
  labels:
    service: otc
spec:
  ports:
    - port: 8094
      protocol: TCP
      targetPort: 8094
  selector:
    service: otc
