dev/Redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisdb
  namespace: osiguranje-dev
  labels:
    service: redisdb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redisdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: redisdb
    spec:
      restartPolicy: Always
      containers:
        - image: arm64v8/redis
          name: redisdb
          ports:
            - name: redisdb
              containerPort: 6379
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redisdb
  namespace: osiguranje-dev
  labels:
    service: redisdb
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    service: redisdb
