dev/Securities.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securities
  namespace: osiguranje-dev
  labels:
    service: securities
spec:
  replicas: 1
  selector:
    matchLabels:
      service: securities
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: securities
    spec:
      restartPolicy: Always
      containers:
        - image: ghcr.io/raf-si-2021/osiguranjeraf2022/securities:latest
          name: securities
          ports:
            - name: securities
              containerPort: 2000
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: securities
  namespace: osiguranje-dev
  labels:
    service: securities
spec:
  ports:
    - port: 2000
      protocol: TCP
      targetPort: 2000
  selector:
    service: securities
