dev/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osiguranje-ingress-backend
  namespace: osiguranje-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: "osiguranje.k8s.elab.rs"
      http:
        paths:
          - pathType: Prefix
            path: "/api(/|$)(.*)"
            backend:
              service:
                name: gateway
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osiguranje-ingress-frontend
  namespace: osiguranje-dev
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: "osiguranje.k8s.elab.rs"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
